# cheb-spde

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: tests.yml
cheb_spde/: __init__.py  noise.py  spde_solver.py
examples/: allen_cahn_demo.py  benchmark_linear.py  burgers_demo.py  burgers_dt_scan.py
tests/: test_deterministic.py  test_ou_noise.py  test_stationary_variance.py
